--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,13 +1,10 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.btn{
+  display: block;
+  padding: 1rem .5rem;
+  color: #FAFAFA;
+  background-color: hsl(210, 35%, 60%);
+  border: 1px solid #3333;
+  border-radius: 1.5rem;
+  text-decoration: none;
+  text-align: center;
 }
