--- a/client/src/components/Phone/PhoneCard.scss
+++ b/client/src/components/Phone/PhoneCard.scss
@@ -1,5 +1,8 @@
 .PhoneCard{
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 40rem;
   &__image{
     width: 100%;
   }
